--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="colorFacebook">#1976D2</color>
     <color name="colorGoogle">#F44336</color>
+    <color name="colorMaps">#28B446</color>
 </resources>
